--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "dirtree": "0.0.2",
     "findit": "~2.0.0",
     "live-tree": "~1.0.0",
-    "tree-node": "~0.2.0"
+    "tree-node": "~0.2.0",
+    "easy-tree": "0.0.3",
+    "directory-tree": "~0.1.1",
+    "job-manager": "0.0.4",
+    "async": "~0.9.0"
   }
 }
